test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/unset-paramref-namespace/05-resources.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: statefulset-pass.yaml
  shouldFail: false
- file: statefulset-fail.yaml
  shouldFail: true
