test/conformance/kuttl/validate/clusterpolicy/standard/cel/parameter-resources/namespaced/unset-paramref-namespace/replicaLimit.yaml
apiVersion: rules.example.com/v1
kind: ReplicaLimit
metadata:
  name: "replica-limit-test.example.com"
  namespace: test-params
maxReplicas: 3
